src/soca/Fortran.h

  class Configuration;
  class DateTime;
  // Geometry iterator key type
  typedef int F90iter;
  // Locations key type
  typedef int F90locs;
  // Goms key type
  typedef int F90goms;
  // Fields key type
  typedef int F90flds;
  // Trajectory for getvalues key type
  typedef int F90getvaltraj;
    void soca_field_write_file_f90(const F90flds &,
                                   const eckit::Configuration * const *,
                                   const util::DateTime * const *);
    void soca_field_interp_nl_f90(const F90flds &,
                                  const F90locs &,
                                  const eckit::Configuration * const *,
                                  const F90goms &);
    void soca_field_interp_nl_traj_f90(const F90flds &,
                                       const F90locs &,
                                       const eckit::Configuration * const *,
                                       const F90goms &,
                                       const F90getvaltraj &);
    void soca_field_interp_tl_f90(const F90flds &,
                                  const F90locs &,
                                  const eckit::Configuration * const *,
                                  const F90goms &,
                                  const F90getvaltraj &);
    void soca_field_interp_ad_f90(const F90flds &,
                                  const F90locs &,
                                  const eckit::Configuration * const *,
                                  const F90goms &,
                                  const F90getvaltraj &);
    void soca_field_gpnorm_f90(const F90flds &, const int &, double &);
    void soca_getpoint_f90(const F90flds &, const F90iter &, double &, const int &);
    void soca_setpoint_f90(F90flds &, const F90iter &, const double &, const int &);
    void soca_field_sizes_f90(const F90flds &, int &, int &, int &,
                              int &, int &, int &);
    void soca_field_rms_f90(const F90flds &, double &);