src/soca/Fields/soca_fields.interface.F90


subroutine soca_field_write_file_c(c_key_fld, c_conf, c_dt) bind(c,name='soca_field_write_file_f90')
  integer(c_int), intent(in) :: c_key_fld  !< Fields
  type(c_ptr),    intent(in) :: c_conf     !< Configuration
  type(c_ptr),    intent(in) :: c_dt       !< DateTime

  type(soca_field), pointer :: fld
  type(datetime)            :: fdate

  call soca_field_registry%get(c_key_fld,fld)
  call c_f_datetime(c_dt, fdate)
  call write_file(fld, fckit_configuration(c_conf), fdate)

end subroutine soca_field_write_file_c

! ------------------------------------------------------------------------------

subroutine soca_field_gpnorm_c(c_key_fld, kf, pstat) bind(c,name='soca_field_gpnorm_f90')
  integer(c_int),    intent(in) :: c_key_fld
  integer(c_int),    intent(in) :: kf
  real(c_double), intent(inout) :: pstat(3*kf)

  type(soca_field), pointer :: fld
  real(kind=kind_real)      :: zstat(3, kf)
  integer :: jj, js, jf

  call soca_field_registry%get(c_key_fld,fld)

  call gpnorm(fld, kf, zstat)
  jj=0
  do jf = 1, kf
     do js = 1, 3
        jj=jj+1
        pstat(jj) = zstat(js,jf)
     enddo
  enddo

end subroutine soca_field_gpnorm_c

! ------------------------------------------------------------------------------

subroutine soca_field_rms_c(c_key_fld, prms) bind(c,name='soca_field_rms_f90')
  integer(c_int),    intent(in) :: c_key_fld
  real(c_double), intent(inout) :: prms

  type(soca_field), pointer :: fld
  real(kind=kind_real)      :: zz

  call soca_field_registry%get(c_key_fld,fld)

  call fldrms(fld, zz)

  prms = zz

end subroutine soca_field_rms_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_nl_c(c_key_fld,c_key_loc,c_vars,c_key_gom) bind(c,name='soca_field_interp_nl_f90')
  integer(c_int), intent(in) :: c_key_fld
  integer(c_int), intent(in) :: c_key_loc
  type(c_ptr),    intent(in) :: c_vars     !< List of requested variables
  integer(c_int), intent(in) :: c_key_gom

  type(soca_field),  pointer :: fld
  type(ufo_locs),    pointer :: locs
  type(ufo_geovals), pointer :: gom
  type(oops_vars)            :: vars

  call oops_vars_create(fckit_configuration(c_vars), vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)
  call ufo_geovals_registry%get(c_key_gom,gom)

  call getvalues(fld, locs, vars, gom)

end subroutine soca_field_interp_nl_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_nl_traj_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='soca_field_interp_nl_traj_f90')
  integer(c_int),           intent(in) :: c_key_fld
  integer(c_int),           intent(in) :: c_key_loc
  type(c_ptr),              intent(in) :: c_vars     !< List of requested variables
  integer(c_int),           intent(in) :: c_key_gom
  integer(c_int), optional, intent(in) :: c_key_traj !< Trajectory for interpolation/transforms

  type(soca_field),      pointer :: fld
  type(ufo_locs),        pointer :: locs
  type(oops_vars)                :: vars
  type(ufo_geovals),     pointer :: gom
  type(soca_getvaltraj), pointer :: traj

  call oops_vars_create(fckit_configuration(c_vars), vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)
  call ufo_geovals_registry%get(c_key_gom,gom)
  call soca_getvaltraj_registry%get(c_key_traj,traj)

  call getvalues(fld, locs, vars, gom, traj, interp_type='nl')

end subroutine soca_field_interp_nl_traj_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_tl_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='soca_field_interp_tl_f90')
  integer(c_int),           intent(in) :: c_key_fld
  integer(c_int),           intent(in) :: c_key_loc
  type(c_ptr),              intent(in) :: c_vars     !< List of requested variables
  integer(c_int),           intent(in) :: c_key_gom
  integer(c_int), optional, intent(in) :: c_key_traj !< Trajectory for interpolation/transforms

  type(soca_field),      pointer :: fld
  type(ufo_locs),        pointer :: locs
  type(oops_vars)                :: vars
  type(ufo_geovals),     pointer :: gom
  type(soca_getvaltraj), pointer :: traj

  call oops_vars_create(fckit_configuration(c_vars), vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)
  call ufo_geovals_registry%get(c_key_gom,gom)
  call soca_getvaltraj_registry%get(c_key_traj,traj)

  call getvalues(fld, locs, vars, gom, traj, interp_type='tl')

end subroutine soca_field_interp_tl_c

! ------------------------------------------------------------------------------

subroutine soca_field_interp_ad_c(c_key_fld,c_key_loc,c_vars,c_key_gom,c_key_traj) bind(c,name='soca_field_interp_ad_f90')
  integer(c_int), intent(in) :: c_key_fld
  integer(c_int), intent(in) :: c_key_loc
  type(c_ptr),    intent(in) :: c_vars     !< List of requested variables
  integer(c_int), intent(in) :: c_key_gom
  integer(c_int), intent(in) :: c_key_traj !< Trajectory for interpolation/transforms

  type(soca_field),      pointer :: fld
  type(ufo_locs),        pointer :: locs
  type(oops_vars)                :: vars
  type(ufo_geovals),     pointer :: gom
  type(soca_getvaltraj), pointer :: traj

  call oops_vars_create(fckit_configuration(c_vars), vars)

  call soca_field_registry%get(c_key_fld,fld)
  call ufo_locs_registry%get(c_key_loc,locs)
  call ufo_geovals_registry%get(c_key_gom,gom)
  call soca_getvaltraj_registry%get(c_key_traj,traj)

  call getvalues_ad(fld, locs, vars, gom, traj)

end subroutine soca_field_interp_ad_c

! ------------------------------------------------------------------------------

subroutine soca_getpoint_c(c_key_fld,c_key_iter,values, nzo) bind(c,name='soca_getpoint_f90')
  integer(c_int), intent(in) :: c_key_fld
  integer(c_int), intent(in) :: c_key_iter
  real(c_double), intent(inout) :: values(nzo*3)
  integer(c_int), intent(in) :: nzo

  type(soca_field),      pointer :: fld
  type(soca_geom_iter), pointer :: iter

  call soca_field_registry%get(c_key_fld,fld)
  call soca_geom_iter_registry%get(c_key_iter,iter)

  call soca_getpoint(fld, iter, values, nzo) 

end subroutine soca_getpoint_c

! ------------------------------------------------------------------------------

subroutine soca_setpoint_c(c_key_fld,c_key_iter,values, nzo) bind(c,name='soca_setpoint_f90')
  integer(c_int), intent(inout) :: c_key_fld
  integer(c_int), intent(in) :: c_key_iter
  real(c_double), intent(in) :: values(nzo*3)
  integer(c_int), intent(in) :: nzo

  type(soca_field),      pointer :: fld
  type(soca_geom_iter), pointer :: iter

  call soca_field_registry%get(c_key_fld,fld)
  call soca_geom_iter_registry%get(c_key_iter,iter)

  call soca_setpoint(fld, iter, values, nzo)    

end subroutine soca_setpoint_c

! ------------------------------------------------------------------------------

subroutine soca_fieldnum_c(c_key_fld, nx, ny, nzo, nzi, ncat, nf) bind(c,name='soca_field_sizes_f90')
  integer(c_int),         intent(in) :: c_key_fld
  integer(kind=c_int), intent(inout) :: nx, ny, nzo, nzi, ncat, nf

  type(soca_field), pointer :: fld

  call soca_field_registry%get(c_key_fld,fld)

  nx = fld%geom%nx
  ny = fld%geom%ny
  nzo = fld%geom%nzo
  nzi = fld%geom%nzi
  ncat = fld%geom%ncat
  nf = fld%nf

end subroutine soca_fieldnum_c

end module soca_fields_mod_c
